--- a/app/assets/stylesheets/items/exhibit-btn.css
+++ b/app/assets/stylesheets/items/exhibit-btn.css
@@ -1,8 +1,8 @@
 .purchase-btn {
   width: 120px;
-  background: #3ccace;
+  background: #f50c18d8;
   text-align: center;
-  border-radius: 4%;
+  border-radius: 100%;
   bottom: 32px;
   right: 32px;
   position: fixed;
